orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/Orgloom_Canvas__c.object-meta.xml
<CustomObject>
    <description>An Org Loom canvas: visual workspace of Salesforce records with layout and metadata. The encrypted canvas body lives in a ContentDocument linked to this record via ContentDocumentLink with ShareType='I', so the file inherits visibility from the record share. This record is the unit of sharing; admins grant access here, not on the file.</description>
    <label>Org Loom Canvas</label>
    <nameField>
        <displayFormat>ORGC-{0000}</displayFormat>
        <label>Canvas Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Loom Canvases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>