orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Body_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Body_Document_Id__c</fullName>
    <description>ContentDocument ID (18-char) where the encrypted canvas body is stored. The ContentDocument is linked to this record via a ContentDocumentLink with ShareType='I' so the file's visibility is inherited from this record's share. Server reads this field on canvas-load to resolve the blob.</description>
    <label>Body Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>