orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Body_Sha256__c.field-meta.xml
<CustomField>
    <fullName>Body_Sha256__c</fullName>
    <description>SHA-256 (hex) of the encrypted canvas body. Server verifies on read to detect content corruption or tampering; mismatch means we surface a hard error rather than silently returning bad data.</description>
    <label>Body SHA-256</label>
    <length>64</length>
    <type>Text</type>
</CustomField>