orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Canvas_Id__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Org Loom's internal canvas ID (UUID). Used as the External Id join key between the SF record and Org Loom's database. Unique within the org.</description>
    <externalId>true</externalId>
    <label>Canvas ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>