orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Encryption_Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key_Version__c</fullName>
    <description>Non-secret version label identifying the keyring generation used for this canvas body. This field never contains an encryption key, wrapped key, secret, or other key material. It supports key rotation without invalidating records already in flight.</description>
    <label>Encryption Key Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>