orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Last_Edited_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited_At__c</fullName>
    <description>When the canvas was last edited in Org Loom (server-side timestamp). Default sort key for list views: newest at the top.</description>
    <label>Last Edited At</label>
    <type>DateTime</type>
</CustomField>