orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>Email of the Org Loom account that owns this canvas. Surfaced on list views and reports.</description>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>