orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Owner_Sf_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sf_User_Id__c</fullName>
    <description>Salesforce User Id (18-char) of the canvas owner. Used by UserRecordAccess queries and the "share back to me" flow when a recipient wants to grant access back to the owner from their org.</description>
    <label>Owner SF User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>