orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <description>Number of Salesforce records currently staged on this canvas. Used for size-at-a-glance in list views and as a coarse signal for canvas complexity in admin dashboards.</description>
    <label>Record Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>