orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <description>Version of the Org Loom canvas record schema. Allows the server to forward-compat older records when future field additions land; read paths check this and decide whether to migrate-on-read.</description>
    <label>Schema Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>