orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <description>Org Loom workspace ID that the canvas belongs to. Used for multi-workspace scoping in queries and reports; admins can build list views filtered to a single workspace.</description>
    <label>Workspace ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>