orgloom-package/force-app/main/default/objects/Orgloom_Canvas__c/listViews/My_Canvases.listView-meta.xml
<ListView>
    <fullName>My_Canvases</fullName>
    <columns>NAME</columns>
    <columns>Workspace_Id__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Last_Edited_At__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Canvases</label>
</ListView>